# mn2

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
.github/workflows/: release.yml
mn2/: __init__.py  cli.py  utils.py
