[tool.poetry]
name = "mn2"
version = "0.3.0"
description = "A script for replacing Mininet CLI with a better one"
authors = ["oplik0 <opliko.reg@protonmail.com>"]
readme = "README.md"
packages = [{include = "mn2"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
prompt-toolkit = "^3.0.39"
typer = {extras = ["all"], version = "^0.9.0"}
pathvalidate = "^3.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
ruff = "^0.1.0"
toml = "^0.10.2"
isort = "^5.12.0"
pre-commit = "^3.5.0"
python-minifier = "^2.9.0"
stickytape = {git = "https://github.com/oplik0/stickytape.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D", "E", "F", "I", "UP", "S", "B", "A", "COM", "ICN", "PL", "RUF", "YTT", "BLE", "C4", "DTZ", "EM", "EXE", "ISC", "RSE", "TCH", "PTH", "TRY", "NPY"]
ignore = ["W191", "D206", "D211", "D213", "PLR0913"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
	"tests",
]

line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.yapf]
USE_TABS = true
COLUMN_LIMIT = 100
CONTINUATION_ALIGN_STYLE = "VALIGN-RIGHT"
